# axplat_crates

./: Cargo.toml  README.md  axconfig.toml
src/: boot.rs  dw_apb_uart.rs  generic_timer.rs  init.rs  irq.rs  lib.rs  mp.rs  power.rs
