[package]
name = "axplat-aarch64-rk3588j"
version = "0.1.0"
description = "Implementation of `axplat` hardware abstraction layer for Rockchip RK3588J SoC."
documentation = "https://docs.rs/axplat-aarch64-rk3588j" # not published
keywords = ["arceos", "os", "hal", "embedded", "aarch64"]
categories = ["embedded", "no-std", "hardware-support", "os"]
edition = "2024"
authors= ["xiaohui"]
license = "GPL-2.0"
repository = "https://github.com/buhenxihuan/axplat_crates"

[features]
fp-simd = ["axcpu/fp-simd"]
irq = ["axplat/irq"]
rtc = []
smp = ["axplat/smp", "kspin/smp"]

[dependencies]
log = "0.4"
kspin = "0.1"
page_table_entry = "0.5"
dw_apb_uart = "0.1"
aarch64-cpu = "10"
aarch64-cpu-ext = "0.1"
rdrive = "0.15"
lazyinit = "0.2"

axconfig-macros = "0.2"
axplat-aarch64-peripherals = "0.1"
axcpu = "0.2"
axplat = "0.1"

[package.metadata.docs.rs]
targets = ["aarch64-unknown-none"]
