[package]
name = "axplat-aarch64-rk3588j"
version = "0.1.0"
description = "Implementation of `axplat` hardware abstraction layer for Rockchip RK3588J SoC."
documentation = "https://docs.rs/axplat-aarch64-rk3588j"
keywords = ["arceos", "os", "hal", "embedded", "aarch64"]
categories = ["embedded", "no-std", "hardware-support", "os"]
edition = "2024"
authors= ["xiaohui <x-iao-h-ui@qq.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
repository = "https://github.com/buhenxihuan/axplat_crates"

[features]
default = ["irq","smp"]
fp-simd = ["axcpu/fp-simd"]
irq = ["axplat/irq"]
rtc = []
smp = ["axplat/smp", "kspin/smp"]

[dependencies]
log = "0.4"
kspin = "0.1"
page_table_entry = "0.5"
dw_apb_uart = "0.1"
aarch64-cpu = "10"
aarch64-cpu-ext = "0.1"
memory_addr = "0.4"
arm-gic-driver = "0.14"
int_ratio = "0.1"

axconfig-macros = "0.2"
axcpu = "0.2"
axplat = "0.1"

[package.metadata.docs.rs]
targets = ["aarch64-unknown-none"]
